--- a/src/components/create/Finalize.scss
+++ b/src/components/create/Finalize.scss
@@ -183,5 +183,8 @@
         .music-info {
             flex-direction: column;
         }
+        .created-lyrics__item--lyric{
+            font-size: 14px;
+        }
     }
 }
