--- a/src/components/create/SelectItem.scss
+++ b/src/components/create/SelectItem.scss
@@ -23,7 +23,8 @@
                 content: '';
                 width: 5px;
                 height: 5px;
-                top: 0;
+                top: -2px;
+                left: -4px;
                 background-color: #cf0;
                 border-radius: 100%;
             }
