--- a/src/components/mypage/Albums.scss
+++ b/src/components/mypage/Albums.scss
@@ -30,10 +30,14 @@
     .albums__body {
       display: flex;
       gap: 16px;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
       .albums__item {
-        width: 300px;
         display: flex;
         flex-direction: column;
+        flex: 1;
+        // width:calc(33.33% - 16px);
         .albums__item-title {
           color: var(--primary-base, #cf0);
           font-family: Orbitron400;
@@ -46,9 +50,19 @@
         .albums__item-intro {
           display: flex;
           gap: 8px;
+          
           .albums__item__img-box {
             width: 160px;
             height: 160px;
+            flex-shrink: 0;
+            padding: 10px;
+            border-radius: 16px;
+            background: var(--Color-03, #222);
+            img{
+              width: 100%;
+              border-radius: 12px;
+              object-fit: cover;
+            }
           }
           .albums__item-desc {
             display: flex;
@@ -127,9 +141,10 @@
         &::after {
           position: absolute;
           content: "";
-          width: 5px;
-          height: 5px;
-          top: 0;
+          width: 4px;
+          height: 4px;
+          top: -2px;
+          left: -4px;
           background-color: #cf0;
           border-radius: 100%;
         }
@@ -162,7 +177,7 @@
     flex-direction: column;
   }
   .albums-table {
-    min-width: 768px;
-    overflow: auto;
+    // min-width: 768px;
+    // overflow: auto;
   }
 }
