--- a/src/components/mypage/MyFavorites.scss
+++ b/src/components/mypage/MyFavorites.scss
@@ -24,9 +24,10 @@
       &::after {
         position: absolute;
         content: "";
-        width: 5px;
-        height: 5px;
-        top: 0;
+        width:4px;
+        height:4px;
+        top: -2px;
+        left: -4px;
         background-color: #cf0;
         border-radius: 100%;
       }
@@ -43,5 +44,15 @@
     border: 1px solid var(--Color-04, #383838);
     background: var(--Dark-Color-01, #0b0b0c);
     margin-bottom: 24px;
+  }
+}
+
+
+
+@media screen and (max-width: 768px) {
+  .my-favorites .my-favorites__header{
+    flex-direction: column;
+    align-items: start;
+    gap: 8px;
   }
 }
