--- a/src/components/mypage/Reward.scss
+++ b/src/components/mypage/Reward.scss
@@ -27,21 +27,28 @@
         &::after {
           position: absolute;
           content: "";
-          width: 5px;
-          height: 5px;
-          top: 0;
+          width: 4px;
+          height: 4px;
+          top: -2px;
+          left: -4px;
           background-color: #cf0;
           border-radius: 100%;
         }
       }
     }
     .section__table {
-      min-width: 768px;
       width: 100%;
-      padding: 12px 16px;
-      margin: 0 auto;
-      border-collapse: collapse;
       overflow: auto;
+      border-radius: 12px;
+      border: 1px solid var(--Color-03, #222);
+      table{
+        padding: 12px 16px;
+        margin: 0 auto;
+        border-collapse: collapse;
+        overflow: auto;
+        min-width: 768px;
+        width: 100%;
+      }
       thead {
         border-bottom: 1px solid var(--stroke-stroke, #232323);
         border-radius: 12px 12px 0px 0px;
@@ -51,7 +58,7 @@
           rgba(114, 138, 58, 0) 20%
         );
         tr {
-          height: 70px;
+          height: 40px;
           padding: 12px 16px;
           gap: 16px;
           align-items: center;
@@ -63,15 +70,17 @@
             font-size: 14px;
             font-style: normal;
             line-height: normal;
+            min-width: 30px;
           }
         }
       }
       tbody {
         tr {
-          height: 70px;
+          height: 50px;
           padding: 12px 16px;
           gap: 16px;
           align-self: stretch;
+          transition: 0.3s;
           td {
             color: var(--Text-music-sub, #aaa);
             text-align: center;
@@ -113,5 +122,14 @@
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .mypage__reward-payment .reward__section .section__header, 
+  .mypage__reward-payment .payment__section .section__header{
+    flex-direction: column;
+    align-items: start;
+    gap: 8px;
   }
 }
