--- a/src/components/unit/AlbumsTable.scss
+++ b/src/components/unit/AlbumsTable.scss
@@ -1,8 +1,15 @@
 .albums-table {
   width: 100%;
-  padding: 12px 16px;
-  margin: 0 auto;
-  border-collapse: collapse;
+  border-radius: 12px;
+  border: 1px solid var(--Color-03, #222);
+  overflow: auto;
+  table{
+    width: 100%;
+    padding: 12px 16px;
+    margin: 0 auto;
+    border-collapse: collapse;
+    min-width: 860px;
+  }
   thead {
     border-bottom: 1px solid var(--stroke-stroke, #232323);
     border-radius: 12px 12px 0px 0px;
@@ -12,7 +19,7 @@
       rgba(114, 138, 58, 0) 20%
     );
     tr {
-      height: 70px;
+      height: 40px;
       padding: 12px 16px;
       gap: 16px;
       align-items: center;
@@ -25,7 +32,6 @@
         font-style: normal;
         line-height: normal;
         white-space: nowrap;
-        padding-right: 16px;
         &:last-child {
           padding-right: 0;
         }
@@ -34,7 +40,7 @@
   }
   tbody {
     tr {
-      height: 70px;
+      height: 50px;
       padding: 12px 16px;
       gap: 16px;
       align-items: center;
