--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    height: 600px;
+    // height: 600px;
     .mypage__profile-bg {
       width: 100%;
       background-color: #333;
@@ -27,8 +27,9 @@
       border: 1px solid var(--primary-base, #cf0);
     }
     .mypage__profile-info {
-      position: absolute;
-      top: 280px;
+      position: relative;
+      top: 0;
+      margin-top: -120px;
       padding: 22px;
       display: flex;
       flex-direction: column;
@@ -36,8 +37,21 @@
       width: 700px;
       height: 300px;
       border-radius: 12px;
-      border: 1px solid var(--primary-base, #cf0);
+      border: 1px solid #cf0;
       background: #0b0b0c;
+      &::after{
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 40px;
+        bottom: -16px;
+        left: -1px;
+        z-index: 0;
+        border-radius: 0px 0 12px 12px;
+        border-bottom: 1px solid #cf0;
+        border-left: 1px solid #cf0;
+        border-right: 1px solid #cf0;
+      }
       .mypage__profile-edit-box {
         display: flex;
         align-items: center;
@@ -93,12 +107,16 @@
       }
       .mypage__social-icons {
         width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 16px;
+        margin-bottom: 8px;
         .social-icon {
           width: 40px;
           height: 40px;
           background-color: #171717;
           border-radius: 50%;
-          margin-right: 16px;
+          // margin-right: 16px;
           img {
             margin: 0 auto;
             object-fit: cover;
@@ -130,9 +148,10 @@
             &::after {
               position: absolute;
               content: "";
-              width: 5px;
-              height: 5px;
-              top: 0;
+              width: 4px;
+              height: 4px;
+              top: -2px;
+              left: -4px;
               background-color: #cf0;
               border-radius: 100%;
             }
@@ -177,21 +196,28 @@
   }
 }
 @media screen and (max-width: 768px) {
+  
   .mypage {
     .mypage__profile {
       width: 100%;
-      height: 580px;
+      // height: 580px;
+      .mypage__profile-bg{
+        width: calc(100% + 32px);
+      }
       .mypage__profile-overlay {
         width: 100%;
-        top: 180px;
+        // top: 180px;
         min-height: 390px;
       }
       .mypage__profile-info {
         width: 100%;
-        top: 180px;
-        min-height: 380px;
+        // top: 180px;
+        // min-height: 380px;
         height: auto;
-
+        margin-top: -20px;
+        &::after{
+          width: 100%;
+        }
         .mypage__profile-edit-box {
           .mypage__profile-info-box {
             .mypage__username {
@@ -206,6 +232,8 @@
     }
     .mypage__nav {
       overflow: auto;
+      margin: 32px auto 16px;
+      padding: 8px 0;
       .mypage__nav-item {
         font-size: 12px;
       }
