--- a/src/components/mypage/AiServices.scss
+++ b/src/components/mypage/AiServices.scss
@@ -91,6 +91,7 @@
       width: 50%;
       img {
         object-fit: cover;
+        width: 100%;
       }
     }
   }
@@ -156,6 +157,7 @@
     letter-spacing: 0.72px;
     margin-bottom: 24px;
     position: relative;
+    margin-top: 16px;
     &::after {
       position: absolute;
       content: "";
