--- a/src/components/mypage/Reward.scss
+++ b/src/components/mypage/Reward.scss
@@ -38,6 +38,7 @@
     }
     .section__table {
       width: 100%;
+      min-height: 100px;
       overflow: auto;
       border-radius: 12px;
       border: 1px solid var(--Color-03, #222);
