--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -91,7 +91,7 @@
         position: absolute;
         top: 0;
         left: 90px;
-        width: 200px;
+        width: 240px;
       }//album__header__title--END--
     }//album__header__album-cover--END--
     .album__header__cover-info{
@@ -167,7 +167,7 @@
   .rhap_main-controls{
     margin-top: -26px;
     button{
-      font-family: auto;
+      font-family: math;
     }
   }
   .rhap_progress-filled{
