--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -66,6 +66,20 @@
         .footer__top__left__language__select-box{
           position: relative;
           width: 100%;
+          &.active{
+            .footer__top__left__language__select-box__title{
+              &::after{
+                transform: translate(0,-50%) rotate(180deg);
+                
+              }
+            }
+            .footer__top__left__language__select-box__list{
+              width: 100%;
+              height: auto;
+              border: 1px solid #383838;
+              opacity: 1;
+            }
+          }
           .footer__top__left__language__select-box__title{
             width: 100%;
             height: 36px;
@@ -93,8 +107,32 @@
               background-size: contain;
               width: 24px;
               height: 24px;
+              transition: 0.3s;
             }
           }//footer__top__left__language__select-box__title--END--
+          .footer__top__left__language__select-box__list{
+            position: absolute;
+            top: 42px;
+            left: 0;
+            z-index: 1;
+            background: #0B0B0C;
+            width: 100%;
+            border-radius: 4px;
+            overflow: hidden;
+            height: 0;
+            border: 1px solid transparent;
+            transition: 0.3s;
+            opacity: 0;
+            li{
+              padding: 12px 16px;
+              font-size: 12px;
+              transition: 0.3s;
+              cursor: pointer;
+              &:hover{
+                background: #87AA00;
+              }
+            }
+          }//footer__top__left__language__select-box__list--END--
         }//footer__top__left__language__select-box--END--
       }//footer__top__left__language--END--
     }//footer__top__left--END--
