--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -15,7 +15,96 @@
 
 
 
+.alarm__modal{
+  position: fixed;
+  top: 0;
+  right: 0px;
+  width: 320px;
+  height: 100vh;
+  z-index: 10;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 16px;
+  .alarm__modal__item{
+    width: 100%;
+    height: 120px;
+    border-radius: 4px;
+    border: 1px solid #CF0;
+    padding: 16px;
+    .alarm__modal__item__title{
+      width: 100%;
+      text-align: center;
+      font-size: 18px;
+    }//alarm__modal__item__title--END--
+    .alarm__modal__item__txt{
+      text-align: center;
+      font-size: 12px;
+      margin-top: 12px;
+    }//alarm__modal__item__txt--END--
+    /* From Uiverse.io by elijahgummer */ 
+    .middle2{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      margin-top: 12px;
+    }
 
+    .bar {
+      width: 6px;
+      height: 20px;
+      display: inline-block;
+      transform-origin: bottom center;
+      border-top-right-radius: 20px;
+      border-top-left-radius: 20px;
+      box-shadow: 5px 10px 20px inset rgba(52, 219, 133, 0.6);
+      animation: loader 1.2s linear infinite;
+    }
+
+    .bar1 {
+      animation-delay: 0.1s;
+    }
+    .bar2 {
+      animation-delay: 0.2s;
+    }
+    .bar3 {
+      animation-delay: 0.3s;
+    }
+    .bar4 {
+      animation-delay: 0.4s;
+    }
+    .bar5 {
+      animation-delay: 0.5s;
+    }
+    .bar6 {
+      animation-delay: 0.6s;
+    }
+    .bar7 {
+      animation-delay: 0.7s;
+    }
+    .bar8 {
+      animation-delay: 0.8s;
+    }
+
+    @keyframes loader {
+      0% {
+        transform: scaleY(0.1);
+        background: transparent;
+      }
+      50% {
+        transform: scaleY(1);
+        background: #CF0;
+      }
+      100% {
+        transform: scaleY(0.1);
+        background: transparent;
+      }
+    }
+
+  }//alarm__modal__item--END--
+}//alarm__modal--END--
 
 
 
