--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -91,6 +91,8 @@
             overflow: auto;
 
             pre{
+              width: 100%;
+              height: 100%;
               position: relative;
               z-index: 1;
               background: transparent;
