영진 수정 - 마이프로필 버튼 수정

--- a/src/components/mypage/Albums.scss
+++ b/src/components/mypage/Albums.scss
@@ -151,11 +151,35 @@
       }
       .my-albums__more-btn {
         width: 100px;
-        height: 28px;
-        img {
-          object-fit: cover;
+        height: 30px;
+        background: #cf0;
+        position: relative;
+        top: 0;
+        transition: 0.2s;
+        color: var(--Text-dark-title, #1A1A1A);
+        font-family: Orbitron600;
+        font-size: 16px;
+        font-style: normal;
+        line-height: normal;
+        border-radius: 12px;
+        &::before{
+          content: '';
+          position: absolute;
+          left: 0;
+          top: 4px;
+          width: calc(100% - 2px);
+          transition: 0.2s;
+          border-radius: 12px;
+          height: 29px;
+          border: 1px solid #cf0;
         }
-      }
+        &:hover{
+          top: 4px;
+          &::before{
+            top: 0;
+          }
+        }
+      }//my-albums__more-btn--END--
     }
     .my-albums__input {
       margin-bottom: 20px;
