--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -294,7 +294,7 @@
     padding: 16px;
     margin-top: 16px;
     .rhap_container{
-      margin-top: 16px;
+      // margin-top: 16px;
       background: transparent;
       border: 1px solid transparent;
       border-radius: 2px;
