영진 수정 알람 추가

--- a/src/components/AlarmModal.scss
+++ b/src/components/AlarmModal.scss
@@ -20,7 +20,7 @@
   padding: 4px;
   border-radius: 4px;
   background:url('../assets/images/alarm.png') center no-repeat #CF0;
-  background-size: 70%;
+  background-size: 20px 20px;
   position: fixed;
   right: -30px;
   bottom: 70px;
