--- a/src/styles/AccountSetting.scss
+++ b/src/styles/AccountSetting.scss
@@ -51,6 +51,7 @@
             width: 160px;
             height: 160px;
             flex-shrink: 0;
+            border-radius: 50%;
           }
           .picture-box__edit-btn {
             position: absolute;
