영진 수정 - toby pull

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -19,8 +19,8 @@
 
 .menu{
   // width: 280px;
-  // height:100%;
-  height:calc(100% - 116px);
+  height:auto;
+  // height:calc(100% - 116px);
   position: fixed;
   top:100px;
   left: -300px;
