--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -61,6 +61,20 @@
       .album-detail__song-detail__left{
         width: 420px;
         flex-shrink: 0;
+        position: relative;
+        .album-detail__song-detail__left__img__lyric-btn{
+          position: absolute;
+          right: 16px;
+          bottom: 16px;
+          background: #000;
+          border-radius: 12px;
+          padding: 4px 12px;
+          color: #fff;
+          font-family: Inter400;
+          font-size: 12px;
+          font-style: normal;
+          line-height: normal;
+        }
         .album-detail__song-detail__left__img{
           width: 100%;
           height: 420px;
@@ -393,6 +407,7 @@
       flex-direction: column;
       gap: 4px;
       align-items: baseline;
+      padding: 20px;
       dt{
         color:#CF0;
         font-family: Orbitron400;
